moviesページのデモ

--- a/index.html
+++ b/index.html
@@ -4,10 +4,18 @@
     <meta charset="UTF-8" />
     <link rel="icon" type="image/svg+xml" href="favicon.svg" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+    <link rel="stylesheet" href="/style.css" />
     <title>データ可視化手法を学ぼう</title>
   </head>
   <body>
-    <div id="app"></div>
+    <div id="app">
+      <h1>データ可視化手法を学ぼう</h1>
+      <p>データ可視化の手法を学ぶページです</p>
+      <h2>サンプル集</h2>
+      <ul>
+        <li><a href="examples/movies/">映画サイトの例</a></li>
+      </ul>
+    </div>
     <script type="module" src="/main.js"></script>
   </body>
 </html>
