車の例を更新

--- a/examples/cars/index.html
+++ b/examples/cars/index.html
@@ -10,7 +10,14 @@
   <body>
     <div id="app">
       <h1>車の例</h1>
-      <div id="chart"></div>
+      <p>
+        下のグラフはその年に発売された車の燃費（1ガロン当たりのマイル数）の平均の推移を表している。
+      </p>
+      <div id="chart1" style="width: 100%"></div>
+      <p>下のグラフはその年に発売された車の馬力の平均の推移を表している。</p>
+      <div id="chart2" style="width: 100%"></div>
+      <p>燃費と馬力の関係を以下に示す</p>
+      <div id="chart3"></div>
     </div>
     <script type="module" src="./cars.js"></script>
   </body>
