トップに戻るためのリンクを追加

--- a/examples/cars/index.html
+++ b/examples/cars/index.html
@@ -18,6 +18,9 @@
       <div id="chart2" style="width: 100%"></div>
       <p>燃費と馬力の関係を以下に示す</p>
       <div id="chart3"></div>
+      <div>
+        <a href="/learn-data-visualization/">トップに戻る</a>
+      </div>
     </div>
     <script type="module" src="./cars.js"></script>
   </body>
