--- a/examples/movies/index.html
+++ b/examples/movies/index.html
@@ -11,6 +11,9 @@
     <div id="app">
       <h1>映画サイト</h1>
       <div id="chart"></div>
+      <div>
+        <a href="/learn-data-visualization/">トップに戻る</a>
+      </div>
     </div>
     <script type="module" src="./movies.js"></script>
   </body>
