--- a/examples/gapminder/index.html
+++ b/examples/gapminder/index.html
@@ -10,7 +10,18 @@
   <body>
     <div id="app">
       <h1>ファクトフルネスのリメイク</h1>
-      <div id="chart"></div>
+      <p>
+        ファクトフルネスでお馴染みのgapminderデータセットを用いて，各国の出生数と平均寿命の関係を可視化します。
+      </p>
+      <input type="range" id="year-range" />
+      <span id="selected-year"></span>
+      <div id="chart1"></div>
+
+      <p>
+        <a href="https://observablehq.com/@chooblarin/remake-of-factfulness"
+          >Observableのノート</a
+        >でもご覧いただけます。
+      </p>
       <div>
         <a href="/learn-data-visualization/">トップに戻る</a>
       </div>
