--- a/index.html
+++ b/index.html
@@ -15,6 +15,7 @@
       <ul>
         <li><a href="examples/movies/">映画サイトの例</a></li>
         <li><a href="examples/cars/">車の例</a></li>
+        <li><a href="examples/gapminder/">ファクトフルネスのリメイク</a></li>
       </ul>
     </div>
     <script type="module" src="/main.js"></script>
