映画の例にグラフを追加

--- a/examples/movies/index.html
+++ b/examples/movies/index.html
@@ -10,7 +10,36 @@
   <body>
     <div id="app">
       <h1>映画サイト</h1>
-      <div id="chart"></div>
+      <p>
+        <a href="https://vega.github.io/vega-datasets/">vega-datasets</a
+        >より映画に関するデータを可視化します。
+      </p>
+      <p>
+        以下は<a href="https://www.rottentomatoes.com/">Rotten Tomatoes</a>と<a
+          href="https://www.imdb.com/"
+          >IMDB</a
+        >の映画レビューの散布図です。
+      </p>
+      <div id="chart1"></div>
+
+      <p>
+        Rotten
+        Tomatoesのレビューは100点満点です。ヒストグラムは以下のとおりです。低レビューがわずかに存在しますが，全体的にほぼ均一な分布であることがわかります。
+      </p>
+
+      <div id="chart2"></div>
+
+      <p>
+        次にIMDBのレビューのヒストグラムも見てみましょう。IMDBの映画レビューは5点満点です。
+      </p>
+
+      <div id="chart3"></div>
+
+      <p>
+        IMDBはRotten
+        Tomatoesとは異なりベルのような形の分布になっていることがわかります。（わずかに負の方向に歪んでいますが。）
+      </p>
+
       <div>
         <a href="/learn-data-visualization/">トップに戻る</a>
       </div>
