--- a/index.html
+++ b/index.html
@@ -16,6 +16,9 @@
         <li><a href="examples/movies/">映画サイトの例</a></li>
         <li><a href="examples/cars/">車の例</a></li>
         <li><a href="examples/gapminder/">ファクトフルネスのリメイク</a></li>
+        <li>
+          <a href="examples/videogamesales/">ビデオゲームの売り上げ</a>
+        </li>
       </ul>
     </div>
     <script type="module" src="/main.js"></script>
