ビデオゲームの売り上げのグラフを表示

--- a/examples/videogamesales/index.html
+++ b/examples/videogamesales/index.html
@@ -10,6 +10,7 @@
   <body>
     <div id="app">
       <h1>ビデオゲームの売り上げ</h1>
+      <div id="chart"></div>
       <div>
         <a href="/learn-data-visualization/">トップに戻る</a>
       </div>
